  is that it adds further flexibilities, e.g. the first directory may
  not be what we want but the second, which can be further tested by
  the byPath() and downstream methods such as the constructor.
o ROBUSTNESS: Now writeColumnsToFiles() for TabularTextFile writes
  files atomically, which should minimize the risk for generating
  incomplete files.
o DEPRECATION: Added a warning message reporting that fromFiles() of
  GenericDataFileSet has been deprecated, if still called by someone.


Version: 0.9.2 [2011-02-14]
o GENERALIZATION: Now append() for GenericDataFileSet tries to also
  append non-GenericDataFileSet object by passing them down to
  appendFiles() assuming they are GenericDataFile:s.
o GENERALIZATION: Now appendFiles() for GenericDataFileSet also accepts
  a single item.  Thus, there is no longer a need to wrap up single
  items in a list.


Version: 0.9.1 [2010-11-19]
o ROBUSTNESS: Now GenericDataFileSet$byName() asserts that arguments
  'name' and 'tags' contain only valid characters.  This will for
  instance prevent passing paths or pathnames by mistake.
o Now appendFullNameTranslator(..., df) for FullNameInterface takes
  either 'pattern' or 'fixed' translations in data.frame.


Version: 0.9.0 [2010-08-19]
o Added sortBy() to GenericDataFileSet, which sorts files either
  in a lexicographic or a mixedsort order.
o DOCUMENTATION: Added more Rd help pages.
o DOCUMENTATION: Removed any duplicated \usage{} statements from
  the Rd documentation.


Version: 0.8.3 [2010-07-06]
o BUG FIX: indexOf() for GenericDataFileSet/List would return NA if
  the search pattern/string contained parentheses.  The reason is that
  such have a special meaning in regular expression.  Now indexOf()
  first search by regular expression patterns, then by fixed strings.
  Thanks Johan Staaf at Lund University and Larry(?) for reporting
  on this issue.


Version: 0.8.2 [2010-05-26]
o Now GenericDataFileSet$findByName(..., mustExist=FALSE) do no longer