@@ -222,6 +222,7 @@
 \alias{appendFullNamesTranslatorByTabularTextFileSet}
 \alias{appendFullNamesTranslatorByTabularTextFileSet.GenericDataFileSet}
 \alias{sortBy}
+\alias{getTags.Arguments}
 
 \description{
   This page contains aliases for all "non-documented" objects that
